--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>gitlab-backup</groupId>
-	<artifactId>git</artifactId>
+	<groupId>br.com.seniocaires</groupId>
+	<artifactId>gitlab-backup</artifactId>
 	<version>1.0.0</version>
 	<dependencies>
 		<dependency>
